updated mobile styling to stop clipping images

--- a/style.css
+++ b/style.css
@@ -310,6 +310,11 @@ body{
         display: none; /* Only show the first image */
         pointer-events: none; /* Optional: disable sliding behavior on mobile */
       }
+
+      #carouselExampleFade{
+        height: 450px;
+      }
+
     }
 
     @media only screen and (min-width: 1251px) {
@@ -347,7 +352,7 @@ body{
    /* ---------- venetian page ---------- */
 
    .venetian-content-img{
-    max-width: 60%;
+    max-width: 70%;
 
 }
 
@@ -359,7 +364,7 @@ body{
 /* ---------- micro cement page ---------- */
 
 .micro-content-img{
- max-width: 60%;
+ max-width: 70%;
 
 }
 
